objects/afdsf__AfrousPlugins__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>afdsf__PluginScript1__c</fullName>
        <label>Plugin Script #1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>afdsf__PluginScript2__c</fullName>
        <label>Plugin Script #2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>afdsf__PluginScript3__c</fullName>
        <label>Plugin Script #3</label>
        <type>Url</type>
    </fields>
    <label>Mashmatrix Plugins</label>
</CustomObject>